--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "type": "module",
   "exports": {
     "require": "./dist/index.cjs",
-    "default": "./dist/index.modern.js",
-    "types": "./dist/index.d.ts"
+    "types": "./dist/index.d.ts",
+    "default": "./dist/index.modern.js"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.module.js",
@@ -54,7 +54,6 @@
   "devDependencies": {
     "@types/node": "18.14.0",
     "graph-diagrams": "0.5.0",
-    "microbundle": "0.15.1",
     "mocha": "10.2.0",
     "prettier": "2.8.4",
     "release-it": "15.6.0",
